@@ -90,6 +90,11 @@ Clusterfuzz issue 15636.
 
 18. Implement non-atomic positive lookaround assertions.
 
+19. If a lookbehind contained a lookahead that contained another lookbehind
+within it, the nested lookbehind was not correctly processed. For example, if 
+/(?<=(?=(?<=a)))b/ was matched to "ab" it gave no match instead of matching 
+"b".
+
 
 Version 10.33 16-April-2019
 ---------------------------
